Changed Copyright Size and Fixed Icons Issues on Mobile

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -220,6 +220,8 @@ body {
   @media screen and (max-width: 992px) {
     .ie10 .ie10 div.molecule-text {
       font: normal normal normal 8.4px/9.85px "gotham_mediumregular", Helvetica, Arial, sans-serif !important; } }
+.ie10 .ie10 #comcast-copyright {
+  font-size: 8px !important; }
 
 @font-face {
   font-family: 'gotham_boldregular';
@@ -426,6 +428,8 @@ body {
   @media screen and (max-width: 992px) {
     .ie10 div.molecule-text {
       font: normal normal normal 8.4px/9.85px "gotham_mediumregular", Helvetica, Arial, sans-serif !important; } }
+.ie10 #comcast-copyright {
+  font-size: 8px !important; }
 
 @font-face {
   font-family: 'gotham_boldregular';
@@ -632,6 +636,8 @@ body {
   @media screen and (max-width: 992px) {
     .ie10 div.molecule-text {
       font: normal normal normal 8.4px/9.85px "gotham_mediumregular", Helvetica, Arial, sans-serif !important; } }
+.ie10 #comcast-copyright {
+  font-size: 8px !important; }
 
 .small-desktop-ratio #map {
   width: 70% !important; }
@@ -926,7 +932,7 @@ p#home-down {
 .cta {
   position: absolute;
   right: 0;
-  bottom: 6.25vh;
+  bottom: 5vh;
   left: 0;
   margin: 0 auto;
   text-align: center;
@@ -1099,57 +1105,44 @@ p#home-down {
       display: none; } }
 
 #comcast-copyright {
-  font: normal normal normal 0.725rem/0.81563rem "gotham_lightregular";
+  font: normal normal normal 8px/10px "gotham_lightregular";
   letter-spacing: 0;
   vertical-align: middle;
+  color: rgba(255, 255, 255, 0.5) !important;
   position: absolute;
-  right: 20px;
-  bottom: 20px; }
+  right: 10px;
+  bottom: 10px; }
   @media screen and (min-width: 2001px) {
     #comcast-copyright {
-      font: normal normal normal 1.1rem/1.2375rem "gotham_lightregular"; } }
+      font: normal normal normal 0.425rem/0.59625rem "gotham_lightregular"; } }
   @media screen and (min-device-width: 1280px) and (max-width: 1366px) {
     #comcast-copyright {
-      font: normal normal normal 0.725rem/0.81563rem "gotham_lightregular"; } }
+      font: normal normal normal 8px/10px "gotham_lightregular"; } }
   @media screen and (max-width: 992px) {
     #comcast-copyright {
-      font: normal normal normal 0.425rem/0.59625rem "gotham_lightregular";
+      font: normal normal normal 0.325rem/0.71563rem "gotham_lightregular";
       bottom: 10px;
-      right: 10px; }
-      #comcast-copyright.ios-fix {
-        bottom: 8% !important; } }
+      right: 10px; } }
   @media screen and (max-device-width: 1024px) and (orientation: landscape) {
     #comcast-copyright {
       position: fixed;
       right: 3%;
       bottom: 4%;
-      font: normal normal normal 0.725rem/0.81563rem "gotham_lightregular"; }
-      #comcast-copyright.ios-fix {
-        bottom: 10% !important; } }
-  @media screen and (max-device-width: 736px) and (orientation: landscape) {
-    #comcast-copyright.ios-fix {
-      right: 3% !important;
-      bottom: 10px !important; } }
+      font: normal normal normal 8px/10px "gotham_lightregular"; } }
   @media screen and (max-device-width: 980px) and (orientation: portrait) {
     #comcast-copyright {
       position: fixed;
       right: 3%;
-      bottom: 4%; }
-      #comcast-copyright.ios-fix {
-        bottom: 10% !important; } }
+      bottom: 4%; } }
   @media screen and (max-device-width: 736px) and (orientation: portrait) {
     #comcast-copyright {
-      font: normal normal normal 0.425rem/0.59625rem "gotham_lightregular";
+      font: normal normal normal 8px/10px "gotham_lightregular";
       position: fixed;
       right: 3%;
-      bottom: 40px; }
-      #comcast-copyright.ios-fix {
-        bottom: 90px !important; } }
+      bottom: 10px; } }
   @media screen and (max-device-width: 320px) and (orientation: portrait) {
     #comcast-copyright {
-      font: normal normal normal 8px/10px "gotham_lightregular"; }
-      #comcast-copyright.ios-fix {
-        bottom: 8% !important; } }
+      font: normal normal normal 8px/10px "gotham_lightregular"; } }
 
 section#contact {
   position: fixed;
