--- a/app/scss/partials/base/_ie10.scss
+++ b/app/scss/partials/base/_ie10.scss
@@ -294,4 +294,7 @@
 			font:$md-paragraphB;
 		}
 	}
+	#comcast-copyright{
+		font-size:8px!important;
+	}
 }
